--- a/disclaimer.htm
+++ b/disclaimer.htm
@@ -143,8 +143,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2025-3-13-clash-v2ray-ss-ssr.htm">3月13日更新18.5M/S，2025年最新高速SSR/Shadowrocket/Clash/V2ray订阅链接免费节点地址分享</a></h4>
-                <p>这一次的节点更新覆盖了美国、韩国、欧洲、香港、新加坡、加拿大、日本等地区,最高速度可达18.5 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/news/article-68680.htm">动物疫苗多少钱打一次猫（动物防疫站给猫打疫苗多少钱）</a></h4>
+                <p>摘要：       今天给各位分享动物疫苗多少钱打一次猫的知识，其中也会对动物防疫站给猫打疫苗多少钱进行解释，如果能碰巧解决你现在面临的问题，别忘了关注本站，现在开始吧！本文目录一览：1、猫咪疫苗怎.</p>
             </div>
         </div>
     </div>
@@ -153,8 +153,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/news/article-66142.htm">美联众合动物医院美容价格 美联众合动物医院价目表</a></h4>
-                <p>摘要：       大家好，今天小编关注到一个比较有意思的话题，就是关于美联众合动物医院美容价格的问题，于是小编就整理了4个相关介绍美联众合动物医院美容价格的解答，让我们一起看看吧。太原市的宠物医院哪</p>
+                <h4><a href="/news/article-90080.htm">微服务nacos简单部署+网关设置+日志管理</a></h4>
+                <p>1.nacos简单部署 2.网关设置 3日志管理.   nacos引用的主要依赖是然后在配置文件进行注册（需要提前启动nacos插件，默认密码都是nacos）       &lt;dependency</p>
             </div>
         </div>
     </div>
@@ -163,8 +163,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2025-3-16-free-ssr-node.htm">3月16日更新21.5M/S，2025年最新高速SSR/V2ray/Clash/Shadowrocket订阅链接免费节点地址分享</a></h4>
-                <p>这一次的节点更新覆盖了欧洲、韩国、日本、加拿大、新加坡、香港、美国等地区,最高速度可达21.5 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/news/article-95327.htm">C# DataTable去重，根据列名去重保留其他列</a></h4>
+                <p>//去掉重复行 DataView dv = table.DefaultView; table = dv.ToTable(true, new string[] { "name", "code" }); </p>
             </div>
         </div>
     </div>
@@ -173,8 +173,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/news/article-95328.htm">属羊的人养猫对财运有好处吗（属羊的养猫好吗风水说法）</a></h4>
-                <p>摘要：       本篇文章给大家谈谈属羊的人养猫对财运有好处吗，以及属羊的养猫好吗风水说法对应的知识点，希望对各位有所帮助，不要忘了收藏本站喔。本文目录一览：1、家里养猫对财运好不好...     </p>
+                <h4><a href="/news/article-94561.htm">动态指针时钟：利用pyqt5制作指针钟表显示实时时间</a></h4>
+                <p>【阅读全文】 文末附完整源代码实现过程... 想实现这样一个功能，然后pyqt5中又没有现成的组件可以使用，于是就想着只能通过绘图的方式来实现。说到绘图的话，turtle框架无疑是最常见的选择，但其实</p>
             </div>
         </div>
     </div>
@@ -183,8 +183,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/news/article-94562.htm">中文时间日期解析错误-UnicodeEncodeError: &#8216;locale&#8217; codec can&#8217;t encode character &#8216;\u5e74&#8217; in position 2: Illegal</a></h4>
-                <p>参考：https://segmentfault.com/q/1010000003070325 &nbsp; &nbsp; &nbsp; &nbsp;word = (datetime.today() +</p>
+                <h4><a href="/free-nodes/2025-4-19-clash-v2ray-ss-ssr.htm">4月19日更新23M/S，2025年最新高速V2ray/Clash/Shadowrocket/SSR订阅链接免费节点地址分享</a></h4>
+                <p>这一次的节点更新覆盖了韩国、日本、香港、欧洲、新加坡、美国、加拿大等地区,最高速度可达23 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -193,8 +193,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/news/article-91574.htm">有人死于被猫抓伤吗（有人死于被猫抓伤吗）</a></h4>
-                <p>摘要：       本篇文章给大家谈谈有人死于被猫抓伤吗，以及有人死于被猫抓伤吗对应的知识点，希望对各位有所帮助，不要忘了收藏本站喔。本文目录一览：1、真的有被猫抓伤死的人吗2、...        </p>
+                <h4><a href="/news/article-90829.htm">猫咪怎么除跳蚤（猫咪除跳蚤项圈有用吗）</a></h4>
+                <p>摘要：       今天给各位分享猫咪怎么除跳蚤的知识，其中也会对猫咪除跳蚤项圈有用吗进行解释，如果能碰巧解决你现在面临的问题，别忘了关注本站，现在开始吧！本文目录一览：1、小猫猫身上总有跳蚤,洗完.</p>
             </div>
         </div>
     </div>
@@ -203,8 +203,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/news/article-82873.htm">动物疫苗接种方法及注意事项有哪些呢图片大全（动物疫苗接种方式）</a></h4>
-                <p>摘要：       今天给各位分享动物疫苗接种方法及注意事项有哪些呢图片大全的知识，其中也会对动物疫苗接种方式进行解释，如果能碰巧解决你现在面临的问题，别忘了关注本站，现在开始吧！本文目录一览：1、.</p>
+                <h4><a href="/news/article-80072.htm">SpringBoot：Controller层调用Service层，出现bug</a></h4>
+                <p>bug描述：无法直接调用service层中的方法，service层上的断点打上直接变成灰色禁用标识，且controller层中的方法无法执行到service中。 之前没遇到过，百思不得其解，maven</p>
             </div>
         </div>
     </div>
@@ -213,18 +213,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/news/article-96820.htm">Java中Scanner的方法</a></h4>
-                <p>JavaScanner的next与nextLine方法  1. 前言 在Scanner类中 有许多的方法 常用的有 nextInt()、nextFloat()、nextDouble()、next()、</p>
-            </div>
-        </div>
-    </div>
-</div>
-<div class="row w3l-achievements">
-    <div class="col-lg-12 item">
-        <div class="card">
-            <div class="box-wrap">
-                <h4><a href="/news/article-81477.htm">动物疫苗可以自己打吗现在（动物疫苗可以自己打吗现在疫情）</a></h4>
-                <p>摘要：       今天给各位分享动物疫苗可以自己打吗现在的知识，其中也会对动物疫苗可以自己打吗现在疫情进行解释，如果能碰巧解决你现在面临的问题，别忘了关注本站，现在开始吧！本文目录一览：1、怎么自.</p>
+                <h4><a href="/free-nodes/2025-4-14-free-clash-subscribe.htm">4月14日更新20.9M/S，2025年最新高速V2ray/Shadowrocket/SSR/Clash订阅链接免费节点地址分享</a></h4>
+                <p>这一次的节点更新覆盖了香港、欧洲、新加坡、美国、加拿大、日本、韩国等地区,最高速度可达20.9 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -239,13 +229,23 @@
         </div>
     </div>
 </div>
+<div class="row w3l-achievements">
+    <div class="col-lg-12 item">
+        <div class="card">
+            <div class="box-wrap">
+                <h4><a href="/news/article-77322.htm">被猫抓伤了怎么判断有没有狂犬病毒呢（被猫抓伤怎样判断用不用打狂犬疫苗）</a></h4>
+                <p>摘要：       今天给各位分享被猫抓伤了怎么判断有没有狂犬病毒呢的知识，其中也会对被猫抓伤怎样判断用不用打狂犬疫苗进行解释，如果能碰巧解决你现在面临的问题，别忘了关注本站，现在开始吧！本文目录一览</p>
+            </div>
+        </div>
+    </div>
+</div>
 
 <h3 class="title-big mb-sm-3 mb-3">归纳</h3>
 <div class="row w3l-achievements">
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                                <h4><span class="badge" style="float: right;">64</span> <a href="/date/2025-04/" title="2025-04 归档">2025-04</a></h4>
+                                <h4><span class="badge" style="float: right;">76</span> <a href="/date/2025-04/" title="2025-04 归档">2025-04</a></h4>
                                 <h4><span class="badge" style="float: right;">85</span> <a href="/date/2025-03/" title="2025-03 归档">2025-03</a></h4>
                             </div>
         </div>
